# HPCKit-code-samples

./: README.md  third-party-programs.txt
Compiler/1d_HeatTransfer/: 1d_HeatTransfer.vcxproj  Makefile  Makefile.win  README.md  sample.json
Compiler/1d_HeatTransfer/src/: 1d_HeatTransfer.cpp
Compiler/Nbody/: CMakeLists.txt  Nbody.vcxproj  sample.json
Compiler/Nbody/src/: CMakeLists.txt  GSimulation.cpp  GSimulation.hpp  Particle.hpp  cpu_time.hpp  main.cpp  type.hpp
Compiler/Particle_Diffusion/: Particle_Diffusion.vcxproj  README.md  sample.json
Compiler/Particle_Diffusion/src/: dpc_common.hpp  motionsim.cpp
Compiler/iso2dfd_dpcpp/: CMakeLists.txt  README.md  iso2dfd.vcxproj  sample.json
Compiler/iso2dfd_dpcpp/src/: iso2dfd.cpp  iso2dfd.h
Compiler/iso3dfd_dpcpp/: README.md  iso3dfd_dpcpp.vcxproj  iso3dfd_dpcpp.vcxproj.filters  sample.json
Compiler/iso3dfd_dpcpp/include/: iso3dfd.h
Compiler/iso3dfd_dpcpp/src/: CMakeLists.txt  iso3dfd.cpp  iso3dfd_kernels.cpp  utils.cpp
Compiler/iso3dfd_omp_offload/: CMakeLists.txt  README.md
Compiler/iso3dfd_omp_offload/include/: iso3dfd.h
Compiler/iso3dfd_omp_offload/src/: CMakeLists.txt  iso3dfd.cpp  iso3dfd_verify.cpp  utils.cpp
Compiler/mandelbrot/: README.md  mandelbrot.vcxproj  sample.json
Compiler/mandelbrot/src/: CMakeLists.txt  dpc_common.hpp  main.cpp  mandel.hpp
Compiler/matrix_mul/: Makefile  README.md  matrix_mul_dpcpp.vcxproj  sample.json
Compiler/matrix_mul/src/: matrix_mul_dpcpp.cpp  matrix_mul_omp.cpp
MKL/matrix_mul_mkl/: Makefile  matrix_mul.sln  matrix_mul_mkl.vcxproj  matrix_mul_mkl.vcxproj.filters  sample.json
MPI/mpi_dpcpp/: CMakeLists.txt  Makefile  README.md  WinScript.bat  mpi_dpcpp.sln  mpi_dpcpp.vcxproj  mpi_dpcpp.vcxproj.filters  sample.json
MPI/mpi_dpcpp/src/: mpi_dpcpp.cpp
Nbody/: CMakeLists.txt  LICENSE_original_src.txt  Nbody.vcxproj  README.md  readme.md
Nbody/src/: CMakeLists.txt  GSimulation.cpp  GSimulation.hpp  Particle.hpp  main.cpp
Particle_Diffusion/: CMakeLists.txt  README.md  readme.md  sample.json
Particle_Diffusion/src/: CMakeLists.txt  motionsim.cpp
iso2dfd_dpcpp/: CMakeLists.txt  README.md  sample.json
iso2dfd_dpcpp/src/: iso2dfd.cpp  iso2dfd.h
iso3dfd_dpcpp/: README.md
iso3dfd_dpcpp/include/: device_selector.hpp  iso3dfd.h
iso3dfd_dpcpp/src/: CMakeLists.txt  iso3dfd.cpp  iso3dfd_kernels_cpu.cpp  iso3dfd_kernels_gpu.cpp  utils.cpp
iso3dfd_omp_offload/: readme.md  sample.json
iso3dfd_omp_offload/include/: iso3dfd.h
iso3dfd_omp_offload/src/: CMakeLists.txt  iso3dfd.cpp  iso3dfd_verify.cpp  utils.cpp
mandelbrot/: CMakeLists.txt  mandelbrot.vcxproj  mandelbrot.vcxproj.filters  sample.json
mandelbrot/src/: CMakeLists.txt  main.cpp  mandelParallel.h  mandelSerial.cpp  mandelSerial.h  syclObject.cpp  syclObject.h
matrix_mul/: Makefile  Makefile.win  README.md  matrix_mul.sln  matrix_mul_dpcpp.vcxproj.filters
matrix_mul/src/: matrix_mul_dpcpp.cpp  matrix_mul_mkl.cpp  matrix_mul_omp.cpp
