set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -std=c++11 -O3")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
add_executable (motionsim.exe motionsim.cpp )
target_link_libraries(motionsim.exe OpenCL sycl)
if(WIN32)
        add_custom_target (run motionsim.exe 10000)
else()
        add_custom_target (run ./motionsim.exe 10000)
endif()
